vlib/v/checker/tests/for_c_stmt_with_var_declaration_in_post_stmt.vv
for i := 100; i < 200; j := 100 {
	println(j)
}
